<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">ButtonText</string>
    <string name="theTextView">Look at my GUI</string>
    <string name="theButton">CLICK HERE</string>
    <string name="theCheckBox">Check this out!</string>
    <string name="theSwitchButton">Switch on/off</string>
    <string name="theEditText">Type here</string>
    <string name="toast_message">Here is more information</string>
</resources>